fluxcd/base/influxdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb
      annotations:
        fluentbit.io/parser: logfmt
    spec:
      containers:
        - name: influxdb
          image: docker.io/library/influxdb:<patched>
          imagePullPolicy: IfNotPresent
          command: [influxd]
          args:
            - --bolt-path=/var/lib/influxdb2/influxd.bolt
            - --engine-path=/var/lib/influxdb2/engine
          ports:
            - name: http
              containerPort: 8086
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 25
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 2
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: data
              mountPath: /var/lib/influxdb2
            - name: tmp
              mountPath: /tmp
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: influxdb
        - name: tmp
          emptyDir: {}
