fluxcd/base/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  ports:
    - name: http
      port: 8086
      targetPort: http
  selector:
    app.kubernetes.io/name: influxdb
